--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost/sampledb
+server.servlet.context-path=/spring-boot
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://168.1.140.122:30092/sampledb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
