Update 01-build-and-deploy.yml for Azure Pipelines

--- a/01-build-and-deploy.yml
+++ b/01-build-and-deploy.yml
@@ -8,6 +8,7 @@ stages:
   jobs:
   - job: FirstJob
     steps:
+    - bash: echo Build FirstJob
     - task: oc-setup@2
       inputs:
         connectionType: 'OpenShift Connection Service'
