Update 01-build-and-deploy.yml for Azure Pipelines

--- a/01-build-and-deploy.yml
+++ b/01-build-and-deploy.yml
@@ -16,8 +16,8 @@ stages:
 - stage: Deploy
 #   variables:
 #     environment: Dev
-#   dependsOn: Build
-#   jobs:
-#   - job: DevDeployJob
-#     steps:
-#     - bash: echo $(environment)DeployJob
+  dependsOn: Build
+  jobs:
+    - job: DevDeployJob
+      steps:
+      - bash: echo DeployJob
