--- a/01-build-and-deploy.yml
+++ b/01-build-and-deploy.yml
@@ -12,7 +12,7 @@ stages:
       inputs:
         dockerVersion: '17.09.0-ce'
     - bash: docker --version
-    - bash: docker login -u iamapikey -p $(apikey) us.icr.io
+    - bash: sudo docker login -u iamapikey -p $(apikey) us.icr.io
     - task: Docker@2
       displayName: Build an image
       inputs:
