Update 01-build-and-deploy.yml for Azure Pipelines

--- a/01-build-and-deploy.yml
+++ b/01-build-and-deploy.yml
@@ -8,7 +8,7 @@ stages:
   jobs:
   - job: InstallCLI
     steps:
-    - bash: curl -sL https://raw.githubusercontent.com/IBM-Cloud/ibm-cloud-developer-tools/master/linux-installer/idt-installer | bash
+    - bash: curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
   - job: LoginToIBMCloud
     dependsOn: InstallCLI
     steps:
