Update 01-build-and-deploy.yml for Azure Pipelines

--- a/01-build-and-deploy.yml
+++ b/01-build-and-deploy.yml
@@ -12,7 +12,7 @@ stages:
   - job: LoginToIBMCloud
     dependsOn: InstallCLI
     steps:
-    - bash: ibmcloud login --apikey $(apikey)
+    - bash: ibmcloud login --apikey $(apikey) -r us-south
   - job: BuildJob
     dependsOn: LoginToIBMCloud
     steps:
